# cc-mcp

./: .env.example  .gitignore  CC-MCP-USAGE-GUIDE-ja.md  CC-MCP-USAGE-GUIDE-zh.md  CC-MCP-USAGE-GUIDE.md  LICENSE  README-ja.md  README-zh.md  README.md  cc-mcp-spec.txt  chat_with_ccmcp.py  context_store.py  debug_test.py  demo.py  demo_cc_mcp.py  intent_classifier.py  keyword_extraction.py  live_test.py  main.py  process_current_message.py  prompt_synthesis.py  pyproject.toml  session_manager.py  test_api_key.py  test_components.py  test_http_client.py  test_live.py  test_mcp_client.py  test_running_server.py  test_server.py  test_server_demo.py  test_simple.py  test_sse_client.py
persistence/: keyword_corpus.json
